# ngc

./: CMakeLists.txt  main.n  math.n
runtime/: dyn_array.h
src/: ast_node.cpp  ast_node.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  type_scope.cpp  type_scope.h
src/ast/nodes/: binary_node.h  definition_node.cpp  definition_node.h  float_node.cpp  float_node.h  function_node.cpp  function_node.h  module_node.cpp  module_node.h  struct_node.cpp  struct_node.h  tuple_node.cpp  type_node.cpp  type_node.h  variable_node.cpp  variable_node.h
src/backends/: backend.cpp  backend.h  llvm.cpp  llvm.h  llvm_backend.cpp  llvm_backend.h
src/backends/shared/: Scope.cpp  Scope.h  block.cpp  block.h  scope.cpp  scope.h
